# final_project_koelectra

./: .gitignore  KeepGoing.py  interview_dataset.csv  interview_dataset2.csv  interview_dataset3.csv  interview_dataset4.csv  predict.py  pyproject.toml  test.py  test2.py  testtest.py  train.py
